# basic-repo

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/: labeler.yml
.github/workflows/: builds.yml  style.yml  tests.yml
my_lib/: __init__.py  conversion.py  management.py  users.py
tests/: test_version.py
